syntax = "proto3";

package rivet.backend.pkg.cluster.get_for_game;

import "proto/common.proto";

message Request {
	repeated rivet.common.Uuid game_ids = 1;
}

message Response {
	message Game {
		rivet.common.Uuid game_id = 1;
		rivet.common.Uuid cluster_id = 2;
	}

	repeated Game games = 1;
}
